Fix alignment of invitation overlay middle component and assessment page record button

--- a/components/RequiredSkills.module.css
+++ b/components/RequiredSkills.module.css
@@ -1,5 +1,5 @@
 .superContainer {
-  width: 60%;
+  width: 80%;
   height: 50%;
   display: flex;
   flex-direction: column;
